# InfinityPackageBuilder

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: key_loading.cmake  util.cmake
dependencies/HDiff/include/HDiff/: diff_types.h  hdiffpatch.h  patch_types.h
dependencies/sol/include/sol/: config.hpp  forward.hpp  sol.hpp
src/: main.cpp
src/Backend/Application/: Application.cpp  Application.hpp
src/Backend/BinaryFiles/: BinaryFiles.hpp
src/Backend/DifferPatcher/: DiffPatch.hpp  PatchBinaryStructure.hpp  TestDiffPatch.hpp
src/Backend/DifferPatcher/DDSDiff/: DdsDiff.cpp  DdsDiff.hpp
src/Backend/DifferPatcher/DiffFiles/: DiffFiles.cpp  DiffFiles.hpp
src/Backend/DifferPatcher/GenerateHashComparison/: GenerateHashComparison.cpp  GenerateHashComparison.hpp
src/Backend/DifferPatcher/PatchFiles/: PatchFiles.cpp  PatchFiles.hpp
src/Backend/FSPackageToolInterface/: FsPackageToolInterface.cpp  FsPackageToolInterface.hpp
src/Backend/Layer/: Layer.hpp
src/Backend/Lua/: FunctionTraits.hpp  LuaInterpreter.cpp  LuaInterpreter.hpp
src/Backend/PersistentState/: PersistentState.cpp  PersistentState.hpp
src/Backend/UiHelpers/: UiHelpers.cpp  UiHelpers.hpp
src/Backend/Vulkan/: Vulkan.hpp
src/Backend/Zip/: ZipUtil.cpp  ZipUtil.hpp
src/Backend/image/: Image.cpp
src/Components/Background/: Background.cpp  Background.hpp
src/Components/Buttons/: MenuButton.cpp  MenuButton.hpp
src/Components/Menu/: Menu.cpp  Menu.hpp
src/Components/SelectKeyFromFile/: SelectKeyFromFile.cpp  SelectKeyFromFile.hpp
src/Frontend/Components/Background/: Background.cpp  Background.hpp
src/Frontend/Components/Buttons/: MenuButton.cpp  MenuButton.hpp
src/Frontend/Components/Menu/: Menu.cpp  Menu.hpp
src/Frontend/Components/SelectKeyFromFile/: SelectKeyFromFile.cpp  SelectKeyFromFile.hpp
src/Frontend/Components/ToggleButton/: ToggleButton.hpp
src/Frontend/ImGuiTheme/: ImGuiTheme.cpp  ImGuiTheme.hpp
src/Frontend/Pages/: Page.hpp
src/Frontend/Pages/LauncherJsonManager/: LauncherJsonManager.cpp  LauncherJsonManager.hpp
src/Frontend/Pages/LauncherJsonManager/Serialization/: BinaryStructure.hpp  Serialization.cpp
src/Frontend/Pages/PackageBuilder/: PackageBuilder.cpp  PackageBuilder.hpp
src/Frontend/Pages/PackageDiffer/: PackageDiffer.cpp  PackageDiffer.hpp
src/Frontend/Pages/ReleasePublisher/: PackagePublisher.cpp  PackagePublisher.hpp
src/Frontend/Pages/Settings/: Settings.cpp  Settings.hpp
src/Frontend/Resources/Fonts/: Roboto-Bold.h
src/Frontend/Resources/Images/: InfinityAppIcon.h  logo.h
src/Frontend/Resources/Images/InfinityIconSet/: arrow_left.h  close.h  cog.h  download.h  exclamation_circle.h  horizontal_scroll.h  loading.h  minus.h  moving_loading_part.h  test.h  tick.h  unmax.h  vertical_scroll.h
src/ImGuiTheme/: ImGuiTheme.cpp  ImGuiTheme.hpp
src/PackageParser/: PackageParser.cpp  PackageParser.hpp
src/Pages/: Page.hpp
src/Pages/LauncherJsonManager/: LauncherJsonManager.cpp  LauncherJsonManager.hpp
src/Pages/LauncherJsonManager/Serialization/: BinaryStructure.hpp  Encryption.cpp  Encryption.hpp  Serialization.cpp  Serialization.hpp
src/Pages/PackageBuilder/: PackageBuilder.cpp  PackageBuilder.hpp
src/Pages/PackageDiffer/: PackageDiffer.cpp  PackageDiffer.hpp
src/Pages/ReleasePublisher/: PackagePublisher.cpp  PackagePublisher.hpp
src/Pages/Settings/: Settings.cpp  Settings.hpp
src/Resources/Fonts/: Roboto-Italic.h  Roboto-Regular.h
src/Resources/Images/: windowIcons.h
src/Router/: Router.cpp  Router.hpp  router.md
src/Util/: Encrypt.hpp  Error.hpp  FunctionTraits.hpp  GithubOAuth.cpp  GithubOAuth.hpp  GithubRelease.cpp  GithubRelease.hpp  LuaInterpreter.cpp  LuaInterpreter.hpp  Notifications.cpp  Notifications.hpp  OpenInBrowser.hpp  StateTimer.hpp  ZipUtil.cpp  ZipUtil.hpp
src/Util/Config/: Config.cpp  Config.hpp
src/Util/Encryption/: Encryption.cpp  Encryption.hpp
src/Util/Errors/: Error.hpp
src/Util/Github/: GithubOAuth.cpp  GithubOAuth.hpp  GithubRelease.cpp  GithubRelease.hpp
src/Util/Notifications/: Notifications.cpp  Notifications.hpp
src/Util/PackageParser/: PackageParser.cpp  PackageParser.hpp
src/Util/Router/: Router.cpp  Router.hpp
src/Util/State/: State.hpp  readme.md
src/renderer/: Layer.hpp
src/renderer/GUI/: ApplicationGui.cpp  ApplicationGui.hpp
src/renderer/GUI/UI/: Ui.cpp  Ui.hpp
src/renderer/GUI/Vulkan/: Vulkan.hpp
src/renderer/buffer/: Buffer.hpp
src/renderer/image/: Image.cpp  Image.hpp
src/renderer/serialization/: BufferStream.cpp  BufferStream.hpp  FileStream.cpp  FileStream.hpp  StreamReader.cpp  StreamReader.hpp  StreamWriter.cpp  StreamWriter.hpp
